--- a/Cloud DWH in Amazon Redshift/dwh.cfg
+++ b/Cloud DWH in Amazon Redshift/dwh.cfg
@@ -2,7 +2,7 @@
 HOST= dwhcluster.cik8ixm9rejp.us-west-2.redshift.amazonaws.com
 DB_NAME= dev
 DB_USER= dwh_user
-DB_PASSWORD= Pemk2017
+DB_PASSWORD= ******
 DB_PORT= 5439
 CLUSTER_TYPE = multi-node
 NODE_TYPE = dc2.large
@@ -11,7 +11,7 @@ CLUSTER_IDENTIFIER = dwhCluster
 
 
 [IAM_ROLE]
-ARN= arn:aws:iam::788040861716:role/dwhRole
+ARN= arn:aws:iam::***********:role/dwhRole
 
 [S3]
 LOG_DATA='s3://udacity-dend/log_data'
@@ -19,6 +19,6 @@ LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
 SONG_DATA='s3://udacity-dend/song_data'
 
 [USER]
-KEY = AKIA3O6XFJAKLOIAZLG3
-SECRET = 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
+KEY = ********************
+SECRET = ***********************
 
